Sense HA HDFS settings and remove permission restrictions during regular execution.
Adding integration test for HA-Namenode-Enabled HDFS, regular and secured.
Upgrade the MiniHDFS fixture to stand up an HA Namenode topology when configured with a nameservice.
Add debug statements to log the configurations being added to the underlying HDFS configuration at repository creation time.
Include a failing integration test for running an HDFS repository against an HDFS cluster, transitioning active Namenodes between repository operations.
Include configurations for a new HA HDFS Fixture, and a Secure HA HDFS Fixture in the build script.
Include new integration test tasks for both HA fixtures.
HDFS Repository will still be subject to the permissions in the policy file
but will not restrict them further when executing against HA configurations.
Move doPrivileged blocks to HdfsSecurityContext so that it can decide when
to restrict permissions.